PODS-2662: status vertical alignment fixed

--- a/app/assets/stylesheets/partials/_scheme__list.scss
+++ b/app/assets/stylesheets/partials/_scheme__list.scss
@@ -86,10 +86,13 @@ p.status { margin-bottom: 0;}
   font-weight: 700;
   padding: 0 10px;
   position: relative;
-  top: 6px;
   text-align: center;
   margin-right: 20px;
   line-height: initial;
+}
+
+.cya-questions-long > * > * {
+    vertical-align: middle;
 }
 
 .complete {
